<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lastClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="1dp"
            android:text="@string/lastClose"
            android:layout_weight="1"
            android:textColor="#a34141" />

        <TextView
            android:id="@+id/open"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/open"
            android:textSize="12sp"
            android:textIsSelectable="false"
            android:textColor="#a34141"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/high"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:width="1dp"
            android:text="@string/high"
            android:layout_weight="1"
            android:textColor="#a34141" />
        <TextView
            android:id="@+id/current"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:width="1dp"
            android:text="@string/current"
            android:layout_weight="1"
            android:textColor="#a34141" />

        <TextView
            android:id="@+id/low"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:width="1dp"
            android:text="@string/low"
            android:layout_weight="1"
            android:textColor="#a34141" />

        <TextView
            android:id="@+id/range"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:width="1dp"
            android:text="@string/range"
            android:layout_weight="1"
            android:textColor="#a34141" />
    </LinearLayout>
</RelativeLayout>
